# libtdesktopenvironment

./: .gitignore  .gitmodules  CMakeLists.txt  libtdesktopenvironment-blueprint.spec  libtdesktopenvironment-blueprint.spec.rpkg  libtdesktopenvironment.pro  libtdesktopenvironment.spec  libtdesktopenvironment.spec.rpkg  rpkg.macros
.copr/: Makefile
lib/: CMakeLists.txt  lib.pro  libtdesktopenvironmentConfig.cmake.in  libtdesktopenvironment_global.h  libtdesktopenvironment_resources.qrc  qt_tdesktopenvironment.pri
lib/Applications/: application.cpp  application.h
lib/Background/: backgroundcontroller.cpp  backgroundcontroller.h  backgroundselectionmodel.cpp  backgroundselectionmodel.h
lib/DesktopPowerProfiles/: desktoppowerprofiles.cpp  desktoppowerprofiles.h
lib/Gestures/: gesturedaemon.cpp  gesturedaemon.h  gestureinteraction.cpp  gestureinteraction.h  gesturetypes.h
lib/Gestures/private/: gesturebackend.cpp  gesturebackend.h
lib/Gestures/x11/: x11gesturedaemon.cpp  x11gesturedaemon.h
lib/Greeter/: logingreeter.cpp  logingreeter.h  logingreeter.ui  messagepane.cpp  messagepane.h  messagepane.ui  passwordpane.cpp  passwordpane.h  passwordpane.ui  readypane.cpp  readypane.h  readypane.ui
lib/MimeAssociations/: mimeassociationmanager.cpp  mimeassociationmanager.h
lib/Screens/: screendaemon.cpp  screendaemon.h  systempopover.cpp  systempopover.h  systemscreen.cpp  systemscreen.h
lib/Screens/private/: overlaywindow.cpp  overlaywindow.h  overlaywindow.ui  screenbackend.cpp  screenbackend.h
lib/Screens/wayland/: waylandmode.h  waylandscreen.cpp  waylandscreen.h  waylandscreenbackend.cpp  waylandscreenbackend.h
lib/Screens/x11/: x11screen.cpp  x11screen.h  x11screenbackend.cpp  x11screenbackend.h
lib/SystemJob/: systemjob.cpp  systemjob.h  systemjobcontroller.cpp  systemjobcontroller.h
lib/SystemSlide/: systemslide.cpp  systemslide.h  systemslide.ui
lib/SystemSlide/private/: slidehud.cpp  slidehud.h  slidehud.ui  slidempriscontroller.cpp  slidempriscontroller.h  slidempriscontroller.ui  slidepulseaudiomonitor.cpp  slidepulseaudiomonitor.h  slidequicksettings.cpp  slidequicksettings.h  slidequicksettings.ui
lib/TdePlugin/: tdeplugininterface.h  tdepluginmanager.cpp  tdepluginmanager.h
lib/TimeDate/: desktoptimedate.cpp  desktoptimedate.h
lib/UPower/: desktopupower.cpp  desktopupower.h  desktopupowerdevice.cpp  desktopupowerdevice.h  desktopupowerdevicesmodel.cpp  desktopupowerdevicesmodel.h
lib/Wm/: desktopaccessibility.cpp  desktopaccessibility.h  desktopwm.cpp  desktopwm.h  desktopwmwindow.cpp  desktopwmwindow.h
lib/Wm/private/: wmbackend.cpp  wmbackend.h
lib/Wm/wayland/: waylandaccessibility.cpp  waylandaccessibility.h  waylandbackend.cpp  waylandbackend.h  waylandkeyboardtables.h  waylandwindow.cpp  waylandwindow.h  wlr-foreign-toplevel-management-unstable-v1-proto.c
lib/Wm/x11/: x11accessibility.cpp  x11accessibility.h  x11backend.cpp  x11backend.h  x11functions.cpp  x11functions.h  x11keyboardtables.cpp  x11keyboardtables.h  x11window.cpp  x11window.h  x11xsettingsprovider.cpp  x11xsettingsprovider.h
lib/mpris/: mprisengine.cpp  mprisengine.h  mprisplayer.cpp  mprisplayer.h
lib/theShellIntegration/: quietmodemanager.cpp  quietmodemanager.h
lib/translations/: ar_SA.ts  en_US.ts  id.ts  ja.ts  vi.qm  vi.ts
lib/wayland-protocols/tdesktopenvironment-protocols/: tdesktopenvironment-accessibility-v1.xml  tdesktopenvironment-keygrab-v1.xml  wlr-layer-shell-unstable-v1.xml
plugins/: CMakeLists.txt
plugins/wayland/: CMakeLists.txt  twaylandregistry.h  waylandplugin.cpp  waylandplugin.h
plugins/wayland/Screens/: waylandgammacontrol.cpp  waylandgammacontrol.h  waylandmode.cpp  waylandmode.h  waylandoutput.cpp  waylandoutput.h  waylandscreen.cpp  waylandscreen.h  waylandscreenbackend.cpp  waylandscreenbackend.h
plugins/wayland/Wm/: waylandaccessibility.cpp  waylandaccessibility.h  waylandbackend.cpp  waylandbackend.h  waylandkeyboardtables.cpp  waylandwindow.cpp  waylandwindow.h  waylandwmconstants.h
plugins/wayland/wayland-protocols/tdesktopenvironment-protocols/: tdesktopenvironment-accessibility-v1.xml
plugins/x11/: CMakeLists.txt  x11plugin.cpp  x11plugin.h
plugins/x11/Gestures/: x11gesturedaemon.cpp  x11gesturedaemon.h
plugins/x11/Screens/: x11screen.cpp  x11screen.h  x11screenbackend.cpp  x11screenbackend.h
plugins/x11/Wm/: x11accessibility.h  x11backend.cpp  x11backend.h  x11keyboardtables.h  x11window.cpp  x11window.h  x11xsettingsprovider.cpp
plugins/x11/translations/: en_US.ts
test/: test.pro  tst_testx11backend.cpp
wayland-layer-shell/: CMakeLists.txt  wayland-layer-shell.pro
wayland-layer-shell/client-lib/: CMakeLists.txt  client-lib.pro  client-lib_global.h  layershellwindow.cpp  layershellwindow.h  tdesktopenvironment-wayland-layer-shell-client-libConfig.cmake.in
wayland-layer-shell/client-lib/private/: layershellshell.cpp  layershellshell.h  layershellsurface.cpp  layershellsurface.h
wayland-layer-shell/qt-plugin/: CMakeLists.txt  qt-plugin.json  qt-plugin.pro  waylandlayershellintegration.cpp  waylandlayershellintegration.h  waylandlayershellplugin.cpp  waylandlayershellplugin.h
